Added necessary items for cjas project.

--- a/cheapjoesartstuff.html
+++ b/cheapjoesartstuff.html
@@ -2,7 +2,7 @@
 <html lang="en" class="wf-loading">
 <head>
 <meta charset="UTF-8">
-<title>Ricardo Beverly Hills</title>
+<title>Cheap Joe's Art Stuff</title>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -62,78 +62,65 @@
 </nav><!-- #EndLibraryItem --></div>
 <div class="main-wrapper">
 <header>
-<h2 class="title">Ricardo Beverly Hills</h2>
+<h2 class="title">Cheap Joe's Art Stuff</h2>
 <p class="project-types">Role — Research, UX Design, UI Design, Prototyping, Design System</p>
 </header>
-<img class="recent-work-floating-browsers" src="assets/images/ricardoBeverlyHills-poster.jpg" alt="A mockup of the Ricardo Beverly Hills website on desktop and mobile sizes.">
+<img class="recent-work-floating-browsers" src="assets/images/cheapJoes-poster.jpg" alt="A mockup of the Cheap Joe's Art Stuff website on desktop and mobile sizes.">
 <section class="project-callout-shell wide-callout project-callout-white">
     <p class="project-detail-heading">Context</p>
-    <p class="project-callout">People travel for the experience. It starts the moment they pack their suitcases. It continues until they find themselves home again. Ricardo Beverly Hills is a company that takes that journey with you. They needed to reflect that experience for customers on their site.</p>
+    <p class="project-callout">Joe Miller was a pharmacist who had a talent for watercolor painting. He wanted to make quality products available to everyone in Boone, North Carolina so he sourced them himself. He put up a sign in the pharmacy reading “Cheap Joe’s Art Stuff.” His hobby outgrew the drug store so he decided it was time to bring Cheap Joe’s Art Stuff to the masses. The Cheap Joe’s team had a website but it wasn’t easy to update or mobile-friendly. While working at Gauge, I helped them launch a site that is easy for their customers to use.</p>
 </section>
-<img class="recent-work-floating-browsers" src="assets/images/ricardoBeverlyHills-BrandImages-01.jpg" alt="Mobile Screenshots of the Home and Collection pages over a brand lifestyle image.">
+<img src="assets/images/cheapJoes-mobileMockups.jpg" alt="Mobile pages for the Cheap Joe's website.">
 <section class="project-callout-shell wide-callout project-callout-white">
-    <p class="project-callout">Ricardo Beverly Hills consists of three brands. We partnered with their team to create an immersive eCommerce experience that encompassed each brand under the Ricardo umbrella. We ultimately combined three brands into two Shopify storefronts so a sitemap was crucial.</p>
+    <p class="project-detail-heading">Optimizing Content for Mobile</p>
+    <p class="project-callout">Over the years, the content on the Cheap Joe’s website had expanded to include anything they found customers needed. They didn’t have a mobile site so visitors had to use the pinch and zoom method to navigate on their phones. The adaptation to mobile helped us refocus on what content was important on each page so that it would display nicely from small to large screens. I like to use a Green, Yellow, and Red system to help us visualize what we will keep, move, or remove from existing pages. This helps us organize what we need for wireframes moving forward.</p>
 </section>
-<img class="recent-work-floating-browsers" src="assets/images/ricardoBeverlyHills-sitemap.jpg" alt="Sitemap for the combination of Ricardo Beverly Hills' three brands.">
+<img src="assets/images/cjas-content-feature-map.jpg" alt="Content and Feature Map Analysis.">
 <section class="project-callout-shell wide-callout project-callout-white">
-    <p class="project-detail-heading">Clean and Modern, Just Like Their Luggage</p>
-    <p class="project-callout">Two of the key project goals were to elevate the brand experience and establish a new typographic system. They wanted to stay within the offerings of Typekit or Google Fonts so I developed a series of typographic studies with their current content. We landing on Open Sans as their workhorse.</p>
+    <p class="project-detail-heading">Bringing in Joe’s Personality</p>
+    <p class="project-callout">One of the great parts about the start of Cheap Joe’s Art Stuff was the relationship between Joe and his customers. He always had a story or quote to share with them. They grew to love him as much as his products. We wanted to bring that into the site so we added a Joe’s Quotes section to the home page.</p>
 </section>
-<img class="recent-work-floating-browsers" src="assets/images/ricardoBeverlyHills-typestudy.jpg" alt="Type studies for Ricardo Beverly Hills featuring Open Sans.">
-<section class="project-callout-shell wide-callout project-callout-white">
-    <p class="project-detail-heading">Customizable Sections</p>
-    <p class="project-callout">One of the benefits Shopify offers is its ease of use from the admin panel. Within its sectioning capabilities, we designed a robust system of options to give the Ricardo team the flexibility to tell their story as they wanted. They have a strong internal marketing team so giving them the keys to customize their site was a huge win.</p>
-</section>
-<img class="recent-work-floating-browsers" src="assets/images/ricardoBeverlyHills-HomeSectionsForPortfolio.jpg" alt="Home page section documentation.">
-<section class="project-callout-shell wide-callout project-callout-white">
-    <p class="project-detail-heading">Descriptive Thumbnails</p>
-    <p class="project-callout">Luggage images at tiny scales degrade into colorful rectangles. I worked with our developers to make the default Shopify thumbnails more useful for the customer. We designed a simple alt tag system for the client that pulled in a snippet of the image description to replace the default Shopify thumbnail image. That way the customer can quickly see what views are possible. By clicking on the text thumbnail, the page scrolled the user to that view.</p>
-</section>
-<img style="max-width:1200px;" class="recent-work-floating-browsers" src="assets/images/ricardoBeverlyHills-thumbnails.jpg" alt="Side-by-side example of the default Shopify thumbnails are our custom descriptive thumbnails.">
-<section class="project-callout-shell wide-callout project-callout-white">
-    <p class="project-callout">Since this system was a new way of generating product pages, it had to be simple. The client already writes the alt tags. We added the functionality in that attribute to double as screen reader content and a thumbnail replacement. The alternative way would be to add a separate custom meta field, doubling the areas of input and time.</p>
-</section>
-<img style="max-width:1000px;" class="recent-work-floating-browsers" src="assets/images/ricardoBeverlyHills-thumbnailCode.jpg" alt="Code showing how the alt tag affects the thumbnail customization.">
-<section class="project-callout-shell wide-callout project-callout-white">
-    <p class="project-detail-heading">Capitalizing on Internal Talent</p>
-    <p class="project-callout">Ricardo Beverly Hills has an amazing internal photo and video team. To highlight their skillset, we reserved space on the product page for a video showing the luggage in use. Luggage is a product that generally requires research. When a customer can visualize themselves with their product the chances of them aspiring to have it increase.</p>
-</section>
-<video autoplay loop playsinline muted="muted" class="recent-work-wide web-shadow" style="display:block; margin-top:3.5em; margin-bottom:1em; max-width:1000px;" poster="assets/video/ricardoBeverlyHills-pdpVideo.jpg">
-      <source src="assets/video/ricardoBeverlyHills-pdpVideo.webm" type="video/webm">
-      <source src="assets/video/ricardoBeverlyHills-pdpVideo.mp4" type="video/mp4">
+<video autoplay loop playsinline muted="muted" class="recent-work-wide web-shadow" style="display:block; margin-bottom:1em; max-width:800px;" poster="assets/video/cjas-joes-quotes.jpg">
+      <source src="assets/video/cjas-joes-quotes.mp4" type="video/mp4">
         Bummer. Your browser does not support the video tab.
 </video>
 <section class="project-callout-shell wide-callout project-callout-white">
-    <p class="project-detail-heading">Wide Open Spaces</p>
-    <p class="project-callout">The client wanted to maximize the amount of horizontal real estate to show off their beautiful luggage. With that goal in mind, we developed a horizontal filtering system to allow easy product discovery while letting the images take center stage.</p>
+    <p class="project-detail-heading">Quick Links at the Ready</p>
+    <p class="project-callout">Cheap Joe’s had a lot of navigation links. We narrowed them down into two categories. All product offerings would live in the main navigation area. Promotional and popular product links would live in a swipeable secondary navigation area. To avoid taking up so much space with large promotional areas on mobile, we designed a swipeable system below the main header. This allowed easy access to areas on the site customers visited most.</p>
 </section>
-<video autoplay loop playsinline muted="muted" class="recent-work-wide web-shadow" style="display:block; margin-top:3.5em; margin-bottom:1em; max-width:1000px;" poster="assets/video/ricardoBeverlyHills-horizontalFiltering-Cropped.jpg">
-      <source src="assets/video/ricardoBeverlyHills-horizontalFiltering-Cropped.mp4" type="video/mp4">
+<img style="max-width:1200px;" src="assets/images/cheapjoes-mobileheaders.jpg" alt="Mobile header states for the Cheap Joe's website.">
+<video autoplay loop playsinline muted="muted" class="recent-work-wide web-shadow" style="display:block; margin-bottom:1em; max-width:400px;" poster="assets/video/cjas-mobile-navigation-prototype.jpg">
+      <source src="assets/video/cjas-mobile-navigation-prototype.mp4" type="video/mp4">
         Bummer. Your browser does not support the video tab.
 </video>
 <section class="project-callout-shell wide-callout project-callout-white">
-    <p class="project-detail-heading">The Complete Journey</p>
-    <p class="project-callout">The final design gave the client the ability to add the storytelling they wanted to. It also helped engage their audience in a way that matched the exceptional experience they have when traveling with Ricardo Beverly Hills luggage.</p>
+    <p class="project-detail-heading">User Focused Product Discovery</p>
+    <p class="project-callout">Art supplies tend to have a lot of variants within certain products. Take their watercolor paints for instance. One brand has over 250 variants of color and size. We developed a filtering system so that on mobile screens, a customer could narrow down options and help them find the paint they were looking for. We also added the functionality to allow a customer to view the options as columns or rows depending on how much detail they needed to see at one time.</p>
 </section>
-<img src="assets/images/ricardoBeverlyHills-pagesForPortfolio.jpg" alt="Home page section documentation.">
+<img style="max-width:1000px;" src="assets/images/cjas-grouped-product-mobile.jpg" alt="Grouped objects can be displayed by row or table since there are so many options.">
+<section class="project-callout-shell wide-callout project-callout-white">
+    <p class="project-detail-heading">Icon System with a Varied Scale</p>
+    <p class="project-callout">Art supply stores need the ability to show certain icons throughout the site. Since they deal with chemicals, they are required to make it clear to customers that certain products could be hazardous. To extend this rule, we developed a scaling system so that these icons could be displayed in various locations throughout the site in a format that was useful to the customer.</p>
+</section>
+<img style="max-width:1200px;" src="assets/images/cheapjoes-icons.jpg" alt="Icon system developed for the collection and product pages.">
 <section class="documentation">
   <article>
     <p class="project-detail-heading">Classification</p>
   <p class="project-detail-content">Research, UX Design, UI Design, Prototyping, Design System</p>
     <p class="project-detail-heading">Client</p>
-  <p class="project-detail-content">Ricardo Beverly Hills while working at Gauge</p>
+  <p class="project-detail-content">Cheap Joe's Art Stuff while working at Gauge</p>
   <p class="project-detail-heading">Production</p>
-  <p class="project-detail-content">Sketch -&gt; InVision</p>
+  <p class="project-detail-content">Sketch -&gt; InVision, InVision Studio Prototyping</p>
     <p class="project-detail-heading">Live Site</p>
-  <p class="project-detail-content"><a href="https://www.ricardobeverlyhills.com/" target="_blank">Visit Ricardo Beverly Hills</a></p>
+  <p class="project-detail-content"><a href="https://www.cheapjoes.com/" target="_blank">Visit Cheap Joe's Art Stuff</a></p>
     </article>
 </section>
 </div>
 <div class="footer-wrapper">
 <section class="bottom-nav">
-	<a href="munroshoes.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+	<a href="ricardobeverlyhills.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
-	<a href="cheapjoesartstuff.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
+	<a href="gaugeeditorial.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
