--- a/index.html
+++ b/index.html
@@ -96,22 +96,22 @@
         </a>
     </div>
     <div class="right_container thumb-image thumb-image-right">
-        <a href="gaugeeditorial.html">
-        <img src="assets/images/gaugeEditorial_thumb.jpg" alt="The thumbnail image for the Gauge Editorial Illustration project.">
+        <a href="cheapjoesartstuff.html">
+        <img src="assets/images/cheapJoes-thumb.jpg" alt="The thumbnail image for the Cheap Joe's website project.">
         <div class="thumb-text-wrap">
-        <h3 class="title">Gauge Editorial Illustrations</h3>
-        <p class="project-types">Editorial Illustrations, Animations</p>
+        <h3 class="title">Cheap Joe's Art Stuff</h3>
+        <p class="project-types">UX + UI Design, Prototyping, Design System</p>
         </div>
         </a>
     </div>
 </section>
 <section class="column_content index">
-    <div class="right_container thumb-image thumb-image-left">
-        <a href="theakkermans.html">
-        <img src="assets/images/theakkermans_thumb.jpg" alt="The thumbnail image for The Akkermans website project.">
+    <div class="left_container thumb-image thumb-image-left">
+        <a href="gaugeeditorial.html">
+        <img src="assets/images/gaugeEditorial_thumb.jpg" alt="The thumbnail image for the Gauge Editorial Illustration project.">
         <div class="thumb-text-wrap">
-        <h3 class="title">The Akkermans!</h3>
-        <p class="project-types">Website, Digital Calling Card</p>
+        <h3 class="title">Gauge Editorial Illustrations</h3>
+        <p class="project-types">Editorial Illustrations, Animations</p>
         </div>
         </a>
     </div>
@@ -126,12 +126,12 @@
     </div>
 </section>
 <section class="column_content index">
-    <div class="right_container thumb-image thumb-image-left">
-        <a href="holidaycards.html">
-        <img src="assets/images/2012holidaycard_thumb.jpg" alt="The thumbnail image for my 2012 Holiday Card website project.">
+    <div class="left_container thumb-image thumb-image-left">
+        <a href="theakkermans.html">
+        <img src="assets/images/theakkermans_thumb.jpg" alt="The thumbnail image for The Akkermans website project.">
         <div class="thumb-text-wrap">
-        <h3 class="title">Akkerman Family Holiday Cards</h3>
-        <p class="project-types">Website, Print, Photography</p>
+        <h3 class="title">The Akkermans!</h3>
+        <p class="project-types">Website, Digital Calling Card</p>
         </div>
         </a>
     </div>
@@ -146,12 +146,12 @@
     </div>
 </section>
 <section class="column_content index">
-    <div class="right_container thumb-image thumb-image-left">
-        <a href="foolsquest.html">
-        <img src="assets/images/foolsquest_thumb.jpg" alt="The thumbnail image for my Fool's Quest music video.">
+    <div class="left_container thumb-image thumb-image-left">
+        <a href="holidaycards.html">
+        <img src="assets/images/2012holidaycard_thumb.jpg" alt="The thumbnail image for my 2012 Holiday Card website project.">
         <div class="thumb-text-wrap">
-        <h3 class="title">Fool's Quest</h3>
-        <p class="project-types">Motion Graphics, Music Video</p>
+        <h3 class="title">Akkerman Family Holiday Cards</h3>
+        <p class="project-types">Website, Print, Photography</p>
         </div>
         </a>
     </div>
@@ -167,11 +167,11 @@
 </section>
 <section class="column_content index last-project-column">
     <div class="left_container thumb-image thumb-image-left">
-        <a href="mikedoughty.html">
-        <img src="assets/images/mikedoughty_thumb.jpg" alt="The thumbnail image for my Mike Doughty illustration.">
+        <a href="foolsquest.html">
+        <img src="assets/images/foolsquest_thumb.jpg" alt="The thumbnail image for my Fool's Quest music video.">
         <div class="thumb-text-wrap">
-        <h3 class="title">Mike Doughty Owl Illustration</h3>
-        <p class="project-types">Illustration</p>
+        <h3 class="title">Fool's Quest</h3>
+        <p class="project-types">Motion Graphics, Music Video</p>
         </div>
         </a>
     </div>
