--- a/scadcoursecards.html
+++ b/scadcoursecards.html
@@ -120,7 +120,7 @@
 </div>
 <div class="footer-wrapper">
 <section class="bottom-nav">
-	<a href="mikedoughty.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+	<a href="foolsquest.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
 	<a href="recentwork.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
