First round of my 2023 Portfolio Updates

--- a/2012card.html
+++ b/2012card.html
@@ -14,7 +14,7 @@
 <script>
   (function(d) {
     var config = {
-      kitId: 'too6jej',
+      kitId: 'aeh8els',
       scriptTimeout: 3000,
       async: true
     },
@@ -55,7 +55,6 @@
 		<ul class="site-nav">
 			<li><a class="current" href="index.html">Projects</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="http://sethakkerman.bigcartel.com/" target="_blank">Shop</a></li>
             <li><a href="https://medium.com/@sethakkerman" target="_blank">Blog</a></li>
 		</ul>
 	</div>
@@ -114,18 +113,18 @@
 </section>
 </div>
 <div class="footer-wrapper">
-<section class="bottom-nav">
-	<a href="2014running.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
-    <button class="take-me-to-the-top">Back to Top</button>
-	<a href="logos.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
-</section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
-    <ul>
-    	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
-        <li><a href="https://www.instagram.com/sethakkerman/" target="_blank">Instagram</a></li>
-        <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
-    </ul>
-    <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
-</footer><!-- #EndLibraryItem --></div>
+    <section class="bottom-nav">
+    <button class="take-me-to-the-top secondary">Back to Top ↑</button>
+    </section>
+        <footer>
+        <ul>
+            <li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
+            <li><a href="https://www.instagram.com/sethakkerman/" target="_blank">Instagram</a></li>
+            <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
+        </ul>
+        <p class="copyright">Be Cool. All Work Owned by Seth Akkerman & Clients.</p>
+        </footer>
+    </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
