--- a/process.html
+++ b/process.html
@@ -14,7 +14,7 @@
 <script>
   (function(d) {
     var config = {
-      kitId: 'too6jej',
+      kitId: 'aeh8els',
       scriptTimeout: 3000,
       async: true
     },
@@ -55,14 +55,13 @@
 		<ul class="site-nav">
 			<li><a class="current" href="index.html">Projects</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="http://sethakkerman.bigcartel.com/" target="_blank">Shop</a></li>
             <li><a href="https://medium.com/@sethakkerman" target="_blank">Blog</a></li>
 		</ul>
 	</div>
 </nav><!-- #EndLibraryItem --></div>
 <div class="main-wrapper">
 <header>
-<h2 class="title">Process</h2>
+<h1 class="title">Process</h1>
 <p class="project-types">Process, UI / UX Design</p>
 </header>
 <div class="poster">
@@ -71,7 +70,7 @@
   	</div>
 </div>
 <section class="documentation process">
-<h3 class="title">Website User Flow Diagram</h3>
+<h2 class="title">Website User Flow Diagram</h2>
 	<p>The main reason for the redesign was to move my portfolio website from pseudosuede.com to sethakkerman.com. It was time. People had trouble spelling it. I had been keeping written and sketched ideas for a while and wanted to work on my process instead of going from sketches straight to code. My first step was to create this basic user flow diagram. That way I could resolve as many potential roadblocks as I could discover early on in the process and really define what I wanted my new website to be.</p>
 	<article>
     <p class="project-detail-heading">My goals for the website redesign:</p>
@@ -93,7 +92,7 @@
 	</div>
 </section>
 <section class="documentation process">
-<h3 class="title">Wireframe Diagram</h3>
+<h2 class="title">Wireframe Diagram</h2>
 	<p>Once I finished the User Flow Diagram, I began working on the Wireframe Diagram for sethakkerman.com. The text components were already written prior to the visual studies so I was able to use actual words instead of lorem ipsum or representational lines. It helped immensely with determining scale.</p>
     <p>Prior to creating this digital version I used note cards with potential content blocks drawn on them to generate quick paper prototypes of my intended wireframe. For me, this method is faster than both sketching and digital mockups and is a task that can be completed anywhere.</p>
 </section>
@@ -104,14 +103,14 @@
 	</div>
 </section>
 <section class="documentation process">
-<h3 class="title">Refined Wireframe Preview</h3>
+<h2 class="title">Refined Wireframe Preview</h2>
 	<p>I have been experimenting with using the Invision App platform for prototyping the refined wireframe I designed in Adobe Illustrator. After I exported the necessary still images it only took me about ten minutes from the time I signed up to create what you see above.</p>
 </section>
 <section class="embedded_video">
     <figure><iframe style="display:block;" src="https://player.vimeo.com/video/125103463?color=ffffff&title=0&byline=0&portrait=0" width="700" height="438" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></figure>
 </section>
 <section class="documentation process">
-<h3 class="title">Individual Page Pacing Diagram</h3>
+<h2 class="title">Individual Page Pacing Diagram</h2>
 	<p>Since the new sethakkerman.com layout relies on full-width images and text blocks, it was important to me the page still maintained a balanced flow. Depending on a user’s device, some images could potentially take over the entire screen. As they scrolled down the page, I didn’t want the user to become lost within a series of dark / dark / dark or light / light / light images. To avoid this, I made a conscious effort to present the work using contrasting content modules. This helped me establish some secondary design conditions, supporting the overall goal of using high-quality images to communicate the most important aspect of each project.</p>
 </section>
 <section class="column_content">
@@ -120,7 +119,7 @@
 	</div>
 </section>
 <section class="documentation process">
-<h3 class="title">Photoshop Mock-ups</h3>
+<h2 class="title">Photoshop Mock-ups</h2>
 	<p>After the wireframe and page flow diagrams were complete, I created a hi-fidelity Photoshop mock-up for sethakkerman.com. It helped me sort out final image dimensions and proportions. I keep a database of all current portfolio images handy so placing those was as easy as placing the pre-written text in the wireframe diagram.</p>
 </section>
 <section class="column_content">
