--- a/2014running.html
+++ b/2014running.html
@@ -14,7 +14,7 @@
 <script>
   (function(d) {
     var config = {
-      kitId: 'too6jej',
+      kitId: 'aeh8els',
       scriptTimeout: 3000,
       async: true
     },
@@ -55,7 +55,6 @@
 		<ul class="site-nav">
 			<li><a class="current" href="index.html">Projects</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="http://sethakkerman.bigcartel.com/" target="_blank">Shop</a></li>
             <li><a href="https://medium.com/@sethakkerman" target="_blank">Blog</a></li>
 		</ul>
 	</div>
