--- a/scadcoursecards.html
+++ b/scadcoursecards.html
@@ -14,7 +14,7 @@
 <script>
   (function(d) {
     var config = {
-      kitId: 'too6jej',
+      kitId: 'aeh8els',
       scriptTimeout: 3000,
       async: true
     },
@@ -51,14 +51,13 @@
       	<div class="navicon"></div>
     	</a>
     </div>
-	<div class="site-nav-wrapper">
-		<ul class="site-nav">
-			<li><a class="current" href="index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="http://sethakkerman.bigcartel.com/" target="_blank">Shop</a></li>
-            <li><a href="https://medium.com/@sethakkerman" target="_blank">Blog</a></li>
-		</ul>
-	</div>
+    <div class="site-nav-wrapper">
+      <ul class="site-nav">
+        <li><a class="current" href="index.html">Projects</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="https://medium.com/@sethakkerman" target="_blank">Blog</a></li>
+      </ul>
+    </div>
 </nav><!-- #EndLibraryItem --></div>
 <div class="main-wrapper">
 <header>
