Added Load More function and updated the back/next styling for all the public projects.

--- a/2014running.html
+++ b/2014running.html
@@ -101,10 +101,10 @@
 <img src="assets/images/2014running_04.jpg" alt="An image of the watch I used to capture my running data.">
 </div>
 <div class="footer-wrapper">
-<section class="bottom-nav">
-	<a href="holidaycards.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
-    <button class="take-me-to-the-top">Back to Top</button>
-	<a href="foolsquest.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
+<section class="bottom-nav interior">
+	<a href="holidaycards.html"><button class="previous tertiary">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+    <button class="take-me-to-the-top tertiary">Back to Top ↑</button>
+	<a href="foolsquest.html"><button class="next tertiary"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
