--- a/about.html
+++ b/about.html
@@ -95,6 +95,7 @@
   <h2 class="title">Volunteering</h2>
       <ul>
         <li><span class="darker-highlight">ETHChicago, Branding + NFT Creation & Air Dropping</span> (2023)</li>
+        <li><span class="darker-highlight">The Webby Awards, Jury</span> (2023)</li>
         <li><span class="darker-highlight">w3 Awards, Jury</span> (2023)</li>
         <li><span class="darker-highlight">Creative Mornings Chicago, Marketing Director</span> (2022 – 2023)</li>    
         <li><span class="darker-highlight">Creative Mornings Chicago, Communications Coordinator</span> (2020 – 2021)</li>
