--- a/foolsquest.html
+++ b/foolsquest.html
@@ -113,10 +113,10 @@
 <img src="assets/images/foolsquest_process_01.jpg" alt="An screen capture of the After Effects project keyframes used to create the animation.">
 </div>
 <div class="footer-wrapper">
-<section class="bottom-nav">
-	<a href="2014running.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
-    <button class="take-me-to-the-top">Back to Top</button>
-	<a href="scadcoursecards.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
+<section class="bottom-nav interior">
+	<a href="2014running.html"><button class="previous tertiary">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+    <button class="take-me-to-the-top tertiary">Back to Top ↑</button>
+	<a href="scadcoursecards.html"><button class="next tertiary"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
