--- a/index.html
+++ b/index.html
@@ -217,19 +217,139 @@
         </a>
     </div>
 </section>
+<div id="additionalProjects" style="display: none;">
+    <section class="column_content index">
+        <div class="left_container thumb-image thumb-image-left">
+            <a href="recentwork.html">
+            <img src="assets/images/recentWork-thumb.jpg" alt="The thumbnail image for the recent work project page.">
+            <div class="thumb-text-wrap">
+            <h2 class="title">Recent Work</h2>
+            <p class="project-types">Case Studies Coming Soon</p>
+            </div>
+            </a>
+        </div>
+        <div class="left_container thumb-image thumb-image-right">
+            <a href="munroshoes.html">
+            <img src="assets/images/munroShoes-thumb.jpg" alt="The thumbnail image for the Munro Shoes project page.">
+            <div class="thumb-text-wrap">
+            <h2 class="title">Munro Shoes</h2>
+            <p class="project-types">UX + UI Design, Prototyping, Design System</p>
+            </div>
+            </a>
+        </div>
+    </section>
+    <section class="column_content index">
+        <div class="right_container thumb-image thumb-image-left">
+            <a href="ricardobeverlyhills.html">
+            <img src="assets/images/ricardoBeverlyHills-thumb.jpg" alt="The thumbnail image for the Ricardo Beverly Hills Shopify project.">
+            <div class="thumb-text-wrap">
+            <h2 class="title">Ricardo Beverly Hills</h2>
+            <p class="project-types">UX + UI Design, Prototyping, Design System</p>
+            </div>
+            </a>
+        </div>
+        <div class="right_container thumb-image thumb-image-right">
+            <a href="cheapjoesartstuff.html">
+            <img src="assets/images/cheapJoes-thumb.jpg" alt="The thumbnail image for the Cheap Joe's website project.">
+            <div class="thumb-text-wrap">
+            <h2 class="title">Cheap Joe's Art Stuff</h2>
+            <p class="project-types">UX + UI Design, Prototyping, Design System</p>
+            </div>
+            </a>
+        </div>
+    </section>
+    <section class="column_content index">
+        <div class="left_container thumb-image thumb-image-left">
+            <a href="gaugeeditorial.html">
+            <img src="assets/images/gaugeEditorial_thumb.jpg" alt="The thumbnail image for the Gauge Editorial Illustration project.">
+            <div class="thumb-text-wrap">
+            <h2 class="title">Gauge Editorial Illustrations</h2>
+            <p class="project-types">Editorial Illustrations, Animations</p>
+            </div>
+            </a>
+        </div>
+        <div class="left_container thumb-image thumb-image-right">
+            <a href="absolutehorseradish.html">
+            <img src="assets/images/absolutehorseradish_thumb.jpg" alt="The thumbnail image for the Absolute Horseradish zine and website project.">
+            <div class="thumb-text-wrap">
+            <h2 class="title">Absolute Horseradish</h2>
+            <p class="project-types">Website, Zine</p>
+            </div>
+            </a>
+        </div>
+    </section>
+    <section class="column_content index">
+        <div class="left_container thumb-image thumb-image-left">
+            <a href="theakkermans.html">
+            <img src="assets/images/theakkermans_thumb.jpg" alt="The thumbnail image for The Akkermans website project.">
+            <div class="thumb-text-wrap">
+            <h2 class="title">The Akkermans!</h2>
+            <p class="project-types">Website, Digital Calling Card</p>
+            </div>
+            </a>
+        </div>
+        <div class="left_container thumb-image thumb-image-right">
+            <a href="logos.html">
+            <img src="assets/images/logos_thumb.png" alt="The thumbnail image representing my logo projects.">
+            <div class="thumb-text-wrap">
+            <h2 class="title">Logos</h2>
+            <p class="project-types">Identities</p>
+            </div>
+            </a>
+        </div>
+    </section>
+    <section class="column_content index">
+        <div class="left_container thumb-image thumb-image-left">
+            <a href="holidaycards.html">
+            <img src="assets/images/2012holidaycard_thumb.jpg" alt="The thumbnail image for my 2012 Holiday Card website project.">
+            <div class="thumb-text-wrap">
+            <h2 class="title">Akkerman Family Holiday Cards</h2>
+            <p class="project-types">Website, Print, Photography</p>
+            </div>
+            </a>
+        </div>
+        <div class="left_container thumb-image thumb-image-right">
+            <a href="2014running.html">
+            <img src="assets/images/2014running_thumb.png" alt="The thumbnail image for my 2014 Running website project.">
+            <div class="thumb-text-wrap">
+            <h2 class="title">2014 Running</h2>
+            <p class="project-types">Website, Data Visualization</p>
+            </div>
+            </a>
+        </div>
+    </section>
+    <section class="column_content index last-project-column">
+        <div class="left_container thumb-image thumb-image-left">
+            <a href="foolsquest.html">
+            <img src="assets/images/foolsquest_thumb.jpg" alt="The thumbnail image for my Fool's Quest music video.">
+            <div class="thumb-text-wrap">
+            <h2 class="title">Fool's Quest</h2>
+            <p class="project-types">Motion Graphics, Music Video</p>
+            </div>
+            </a>
+        </div>
+        <div class="right_container thumb-image thumb-image-right">
+            <a href="scadcoursecards.html">
+            <img src="assets/images/scadcoursecards_thumb.jpg" alt="The thumbnail image for my SCAD Course Cards project.">
+            <div class="thumb-text-wrap">
+            <h2 class="title">SCAD Course Cards</h2>
+            <p class="project-types">Data Visualization</p>
+            </div>
+            </a>
+        </div>
+    </section>
+</div>
 <section class="project-callout-shell ultra-wide-callout contact-callout-container">
     <div class="contact-callout">
     <h2>Request Project Access</h2>
     <p>Want to access or talk about a project above? <a href="mailto:seth@sethakkerman.com?subject=Howdy%20Seth,%20Let's%20Chat!">Email me</a> and I’ll be happy to!</p>
     </div>
 </section>
-<section class="documentation index">
-	<p style="text-align:center; max-width:100%;"><a href="allprojects.html">View all my projects here →</a></p>
-</section>
 </div>
 <div class="footer-wrapper">
 <section class="bottom-nav">
-<button class="take-me-to-the-top secondary">Back to Top ↑</button>
+<button id="loadMoreProjects" class="load-more tertiary footer-button">Load All Projects</button>
+<button class="take-me-to-the-top secondary footer-button">Back to Top ↑</button>
 </section>
     <footer>
     <ul>
@@ -337,7 +457,39 @@ tooltips.forEach(function(tooltip) {
     document.getElementById('contact').addEventListener('click', function() {
         window.location.href = "mailto:seth@sethakkerman.com?subject=Howdy%20Seth,%20Let's%20Chat!";
     });
-    </script>
+</script>
+
+<script>
+function loadMoreProjects() {
+    var additionalProjects = document.getElementById('additionalProjects').children;
+    var mainWrapper = document.querySelector('.main-wrapper');
+    var requestProjectAccessBlock = document.querySelector('.project-callout-shell');
+    var loadMoreButton = document.getElementById('loadMoreProjects');
+
+    while (additionalProjects.length > 0) {
+        let project = additionalProjects[0];
+        project.classList.add('fade-in');
+        project.style.display = 'block';
+        mainWrapper.insertBefore(project, requestProjectAccessBlock);
+    }
+
+    // Hide the "Load More Projects" button if there are no more projects to load
+    if (additionalProjects.length === 0) {
+        loadMoreButton.style.display = 'none';
+    }
+}
+
+document.addEventListener('DOMContentLoaded', function() {
+    if (document.cookie.split(';').some((item) => item.trim().startsWith('loadMoreClicked='))) {
+        loadMoreProjects(); // Load more projects if the cookie is present
+    }
+});
+
+document.getElementById('loadMoreProjects').addEventListener('click', function() {
+    loadMoreProjects();
+    document.cookie = "loadMoreClicked=true;path=/;max-age=86400"; // Set a cookie for 1 day
+});
+</script>
 
 </body>
 </html>
