--- a/logos.html
+++ b/logos.html
@@ -104,18 +104,18 @@
 <img src="assets/images/logos_06.jpg" alt="A Cancer? I don't even know her. t-shirt is available through Cotton Bureau.">
 </div>
 <div class="footer-wrapper">
-<section class="bottom-nav">
-	<a href="theakkermans.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
-    <button class="take-me-to-the-top">Back to Top</button>
-	<a href="holidaycards.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
-</section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
+<section class="bottom-nav interior">
+	<a href="theakkermans.html"><button class="previous tertiary">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+    <button class="take-me-to-the-top tertiary">Back to Top ↑</button>
+	<a href="holidaycards.html"><button class="next tertiary"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
+</section><footer>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
         <li><a href="https://www.instagram.com/sethakkerman/" target="_blank">Instagram</a></li>
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
     <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
-</footer><!-- #EndLibraryItem --></div>
+</footer></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
