--- a/ricardobeverlyhills.html
+++ b/ricardobeverlyhills.html
@@ -129,10 +129,10 @@
 </section>
 </div>
 <div class="footer-wrapper">
-<section class="bottom-nav">
-	<a href="munroshoes.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
-    <button class="take-me-to-the-top">Back to Top</button>
-	<a href="cheapjoesartstuff.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
+<section class="bottom-nav interior">
+	<a href="munroshoes.html"><button class="previous tertiary">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+    <button class="take-me-to-the-top tertiary">Back to Top ↑</button>
+	<a href="cheapjoesartstuff.html"><button class="next tertiary"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
