--- a/scadcoursecards.html
+++ b/scadcoursecards.html
@@ -118,10 +118,10 @@
 <img src="assets/images/scadcoursecards_06.jpg" alt="An images showing a portion of the processing code in Sublime Text.">
 </div>
 <div class="footer-wrapper">
-<section class="bottom-nav">
-	<a href="foolsquest.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
-    <button class="take-me-to-the-top">Back to Top</button>
-	<a href="recentwork.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
+<section class="bottom-nav interior">
+	<a href="foolsquest.html"><button class="previous tertiary">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
+    <button class="take-me-to-the-top tertiary">Back to Top ↑</button>
+	<a href="recentwork.html"><button class="next tertiary"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
